WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105778
REGRESSION(
r138394
): platform/mac/accessibility/file-upload-button-subrole.html is failing
https://bugs.webkit.org/show_bug.cgi?id=105778
Summary
REGRESSION(r138394): platform/mac/accessibility/file-upload-button-subrole.ht...
Ryosuke Niwa
Reported
2012-12-26 15:21:23 PST
http://trac.webkit.org/changeset/138394
@@ -621,5 +639,5 @@ /* accessibility role description for a file upload button */ -"file upload" = "file upload button"; +"file upload" = "file upload"; caused platform/mac/accessibility/file-upload-button-subrole.html to start failing.
http://build.webkit.org/results/Apple%20Lion%20Release%20WK1%20(Tests)/r138484%20(7648)/platform/mac/accessibility/file-upload-button-subrole-pretty-diff.html
Attachments
Fixes the bug
(3.47 KB, patch)
2013-01-04 15:18 PST
,
Ryosuke Niwa
ap
: review+
ap
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2012-12-26 15:23:18 PST
Mountain Lion results:
http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK1%20(Tests)/r138484%20(5162)/results.html
Ryosuke Niwa
Comment 2
2012-12-26 15:25:44 PST
Added a test expectation in
http://trac.webkit.org/changeset/138486
.
Alexey Proskuryakov
Comment 3
2012-12-26 15:34:15 PST
This part of the patch should be reverted.
Brady Eidson
Comment 4
2012-12-26 16:44:49 PST
From my comment over in 105592,
https://bugs.webkit.org/show_bug.cgi?id=105592#c9
"That happened simply because I ran update-localizable-strings (or whatever it is actually called) which apparently nobody had done in awhile. If code changed that caused the generated string to be "file upload button" and that code was correct, then we should rebaseline. I have no idea how to explore that." Alexey, you say that part of the change should be reverted. How do you determine this? I ask because if someone reverted it then checked that in... then someone later came along and ran update-webkit-localizable-strings again, the same change would be generated. It seems if update-webkit-localizable-strings will always regenerate that change, yet that change is wrong, then either update-webkit-localizable-strings is broken or something in the code is broken. And whichever of those is broken should be fixed.
Alexey Proskuryakov
Comment 5
2012-12-27 12:06:46 PST
> Alexey, you say that part of the change should be reverted. How do you determine this?
Such a change would require review, not a rubber-stamp. Accessibility behavior changes should be discussed on their own merits, not be kept in the tree after an accidental commit by default. "file upload button" certainly sounds like a more appropriate plain English description for the button, if I were to guess about the rationale for existing behavior. I think that update-webkit-localizable-strings just always makes English key and value match, which wasn't the case before. You can use svn blame to determine when they were made different. Perhaps someone fixed the text in Localizable.strings without realizing that don't treat the file as authoritative.
Ryosuke Niwa
Comment 6
2013-01-04 02:18:10 PST
What are we going to do about this?
chris fleizach
Comment 7
2013-01-04 15:00:23 PST
we should change the strings file to use "file upload button" = "file upload button";
Ryosuke Niwa
Comment 8
2013-01-04 15:18:27 PST
Created
attachment 181389
[details]
Fixes the bug
WebKit Review Bot
Comment 9
2013-01-04 15:24:05 PST
Attachment 181389
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/plat..." exit_code: 1 LayoutTests/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ryosuke Niwa
Comment 10
2013-01-04 15:26:47 PST
Comment on
attachment 181389
[details]
Fixes the bug View in context:
https://bugs.webkit.org/attachment.cgi?id=181389&action=review
>> LayoutTests/ChangeLog:8 >> + Removed the old test expectations. > > Line contains tab character. [whitespace/tab] [5]
Fixes this. Thanks for the review, Alexey.
Radar WebKit Bug Importer
Comment 11
2013-01-04 15:27:54 PST
<
rdar://problem/12960393
>
Ryosuke Niwa
Comment 12
2013-01-04 15:37:19 PST
Committed
r138860
: <
http://trac.webkit.org/changeset/138860
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug