REGRESSION(r138394): platform/mac/accessibility/file-upload-button-subrole.html is failing https://bugs.webkit.org/show_bug.cgi?id=105778

Reviewed by Alexey Proskuryakov.

Source/WebCore:

Rename "file upload" to "file upload button".

* English.lproj/Localizable.strings:
* platform/LocalizedStrings.cpp:

LayoutTests:

Removed the old test expectations.

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/124333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138860 268f45cc-cd09-0410-ab3c-d52691b4dbfc