Source/WebCore/platform/LocalizedStrings.cpp
@@ -571,10 +571,10 @@ String AXFooterRoleDescriptionText()
 {
     return WEB_UI_STRING("footer", "accessibility role description for a footer");
 }
-    
+
 String AXFileUploadButtonText()
 {
-    return WEB_UI_STRING("file upload", "accessibility role description for a file upload button");
+    return WEB_UI_STRING("file upload button", "accessibility role description for a file upload button");
 }
 
 #if PLATFORM(MAC)
